# discord-irc

./: Cargo.toml
.cargo/: config
src/: main.rs
